kubernetes/apps/immich/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: immich-internal
  namespace: immich
  labels:
    app: immich
  annotations:
    kubernetes.io/ingress.class: traefik-tailscale
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`immich.internal.dmhosted.com`)
      kind: Rule
      services:
        - name: immich-server
          port: http
  tls:
    secretName: immich-internal-cert
